# ap-notes

./: .gitignore  README.md  book.toml  shell.nix
.github/workflows/: mdbook.yml
haskell/: GenServer.hs  QuasiParsec.hs  README.md  Week1Classes.hs  Week1Phantom.hs  Week1Tests.hs  Week3.hs  Week3Megaparsec.hs  free_monads.hs  notes.cabal  readerstate.hs
haskell/Week1/: Classes.hs  Phantom.hs  Tests.hs
haskell/Week2/: ReaderState.hs
haskell/Week3/: Megaparsec.hs  Parser.hs
haskell/Week4/: Exceptions.hs  Free.hs  FreeAsync.hs
haskell/Week5/: Async.hs  Basics.hs  Counter.hs  Properties.hs
haskell/Week6/: Async.hs  Basics.hs  Counter.hs  Counter2.hs  Properties.hs  Stateful.hs
haskell/Week7/: FreeConcurrency.hs  InitialAttempt.hs
haskell/concurrency/genserver/: genserver.cabal
haskell/concurrency/genserver/src/: Genserver.hs
haskell/concurrency/genserver/src-exe/: Counter.hs  Counter2.hs
src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  introduction.md
