cabal-version:      3.0
name:               notes
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall -Wno-type-defaults

library
    import: common
    hs-source-dirs: .
    build-depends:
                      base
                  , megaparsec >= 9.6.1
                  , QuickCheck
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
    exposed-modules:
        GenServer
        Week1.Classes
        Week1.Phantom
        Week1.Tests
        Week2.ReaderState
        Week3.Parser
        Week3.Megaparsec
        Week4.Exceptions
        Week4.Free
        Week4.FreeAsync
        Week5.Properties
        Week6.Async
        Week6.Basics
        Week6.Counter

